--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <%= link_to "cities", cities_path %>|
   <%= link_to "rooms", rooms_path %>|
   <%= link_to "unauthorised_rooms", rooms_unauthorize_path %>
+  <%= link_to "myrooms", rooms_myrooms_path %>
    <% else %>
   <%= link_to "Login", new_user_session_path %> | <%= link_to "Register", new_user_registration_path %> 
   <% end %>
