--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,19 @@
   <%= link_to "Account Settings", edit_user_registration_path %> | 
   <%= link_to "Logout", destroy_user_session_path, method: :delete %>
   <%= link_to "cities", cities_path %>|
-  <%= link_to "rooms", rooms_path %>|
+  <%= link_to "rooms", rooms_path %>
+  <% if current_user.role?("admin")%>
   <%= link_to "unauthorised_rooms", rooms_unauthorize_path %>
+  <% end %>
+  <% if current_user.role?("host")%>
   <%= link_to "myrooms", rooms_myrooms_path %>
+  <% end %>
+  
+  
    <% else %>
   <%= link_to "Login", new_user_session_path %> | <%= link_to "Register", new_user_registration_path %> 
-  <% end %>
 
+<% end %>
 <%= yield %>
 <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
