--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,6 +1,8 @@
 <h2> Listing cities </h2>
 
 <% @cities.each do |city| %>
-<%= link_to city.name, city_path(city.id) %>  
+<%=link_to " #{city.name} #{city.rooms.length}", city_path(city.id)  %>  
 <% end %>
+<% if can? :create, City.new %>
 <%= link_to "add city", new_city_path %>
+<% end %>
