added an attribute to price to bookings table and create special price and review model

--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -4,16 +4,36 @@
 
   <strong>name:</strong>
   <%= @city.name %>
+  <table>
+  <thead>
+  <tr>
+  <th>Image </th>
+  <th>Name</th>
+  <th>Actions</th>
+ 
+  </tr>
+  </thead>
+  <tbody>
+
 </p>
 <% if @city.rooms.empty? %>
 <h2> no hotel found </h2>
 <% else %>
 <% @city.rooms.each do |room| %>
-<%= room.images_tag %>
-<% end %>
-<% end %>
- <%= link_to  "edit", edit_city_path(@city.id) %>
+
+<tr>
+<td><%= image_tag(room.images.url) %></td>
+<td><%= room.name %></td>
+<td><%= link_to  "edit", edit_city_path(@city.id) %>
 
  <%= link_to "back", cities_path %>
 
- <%= link_to "destroy", city_path(@city.id), method: :delete, data: {confirm: "Are you sure?"} %>
+ <%= link_to "destroy", city_path(@city.id), method: :delete, data: {confirm: "Are you sure?"} %></td>
+
+ </tr>
+<% end %>
+
+<% end %>
+
+ </tbody>
+</table>
