--- a/app/views/notification/rooms_confirmation.html.erb
+++ b/app/views/notification/rooms_confirmation.html.erb
@@ -1,6 +1,6 @@
 <h1>Notification#authorize_confirmation</h1>
 
-<p>Hi <%= @booking.user.name %>, <br/>
+<p>Hi <%= @booking.user.username %>, <br/>
  Your booking has been added into the </p>
 
             <h4><%= @booking.room.name %>  
