--- a/app/views/cities/edit.html.erb
+++ b/app/views/cities/edit.html.erb
@@ -1,6 +1,2 @@
-<%= form_for @city do |f| %>
-<%= f.label :CityName %>
-<%= f.text_field :name %>
-
-<%= f.submit %>
-<% end %>
+<h2>Edit City</h2>
+<%= render 'form' %>
