--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,9 +1,10 @@
+<div class="container">
 <h1> My booking </h1>
 
 	<% @bookings.each do |booking| %>
 	<%= booking.start_date %>
 	<%= booking.end_date %>
-	<%= booking.room.name %>
+	<%= booking.room.name%>
 	<%= booking.user.username %>
 	<% end %>
-	
+	</div>
