--- a/app/views/cities/new.html.erb
+++ b/app/views/cities/new.html.erb
@@ -1,6 +1,4 @@
-<%= form_for @city do |f| %>
-<%= f.label :CityName %>
-<%= f.text_field :name %>
 
-<%= f.submit %>
-<% end %>
+<h2>add city</h2>
+
+<%= render 'form' %>
