--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,39 +1,122 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-6">
+    <strong>name:</strong>
+    <%= @city.name %>
+    <% if @city.rooms.empty? %>
+    <h2> no hotel found </h2>
+    <% else %>
+    <% @city.rooms.each do |room| %>
 
-<p>
+    <table class="table">
+    <thead>
+    <tr>
+    <th>Image </th>
+    <th>Name</th>
+    <th>Actions</th>
+>
+    </tr>
+    </thead>
+    <tbody>
 
-  <strong>name:</strong>
-  <%= @city.name %>
-  <table>
-  <thead>
-  <tr>
-  <th>Image </th>
-  <th>Name</th>
-  <th>Actions</th>
- 
-  </tr>
-  </thead>
-  <tbody>
+    <tr>
+    <td><%= image_tag(room.images.url) %></td>
+    <td><%= room.name %></td>
+    <td><%= link_to  "edit", edit_city_path(@city.id) %>
 
-</p>
-<% if @city.rooms.empty? %>
-<h2> no hotel found </h2>
-<% else %>
-<% @city.rooms.each do |room| %>
+    <%= link_to "back", cities_path %>
 
-<tr>
-<td><%= image_tag(room.images.url) %></td>
-<td><%= room.name %></td>
-<td><%= link_to  "edit", edit_city_path(@city.id) %>
+    <%= link_to "destroy", city_path(@city.id), method: :delete, data: {confirm: "Are you sure?"} %></td>
 
- <%= link_to "back", cities_path %>
+    </tr>
+    <% end %>
 
- <%= link_to "destroy", city_path(@city.id), method: :delete, data: {confirm: "Are you sure?"} %></td>
+    <% end %>
+    </tbody>
+    </table>
+    </div>
 
- </tr>
-<% end %>
+    <% if @city.rooms.empty? %>
 
-<% end %>
 
- </tbody>
-</table>
+    
+    <% else %>>
+      <div class="col-md-6">
+      <div class="page-header">
+        <h2>Locations</h2>
+      </div>
+      <div id="map_wrapper">
+          <div id="map_canvas" class="mapping"></div>
+      </div>
+      <style>  
+          #map_wrapper {
+            height: 400px;
+        }
+        #map_canvas {
+            width: 100%;
+            height: 100%;
+        }  
+        </style>
+
+    </div>
+    <% end %>
+  </div>
+
+<script>
+  jQuery(function($) {
+    // Asynchronously Load the map API 
+    var script = document.createElement('script');
+    script.src = "//maps.googleapis.com/maps/api/js?sensor=false&callback=initialize";
+    document.body.appendChild(script);
+});
+function initialize() {
+    var map;
+    var bounds = new google.maps.LatLngBounds();
+    var mapOptions = {
+        mapTypeId: 'roadmap'
+    };
+                    
+    // Display a map on the page
+    map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+    map.setTilt(45);
+        
+    // Multiple Markers
+    var markers = [];
+    
+    <% @city.rooms.each do |room| %>
+      markers.push(['<%= room.name %>', <%= room.latitude %>, <%= room.longitude %>])
+    <% end %>
+                        
+    // Info Window Content
+   
+        
+    // Display multiple markers on a map
+    var infoWindow = new google.maps.InfoWindow(), marker, i;
+    
+    // Loop through our array of markers & place each one on the map  
+    for( i = 0; i < markers.length; i++ ) {
+        var position = new google.maps.LatLng(markers[i][1], markers[i][2]);
+        bounds.extend(position);
+        marker = new google.maps.Marker({
+            position: position,
+            map: map,
+            title: markers[i][0]
+        });
+        
+        // Allow each marker to have an info window    
+        google.maps.event.addListener(marker, 'click', (function(marker, i) {
+            return function() {
+                infoWindow.setContent(infoWindowContent[i][0]);
+                infoWindow.open(map, marker);
+            }
+        })(marker, i));
+        // Automatically center the map fitting all markers on the screen
+        map.fitBounds(bounds);
+    }
+    // Override our map zoom level once our fitBounds function runs (Make sure it only runs once)
+    var boundsListener = google.maps.event.addListener((map), 'bounds_changed', function(event) {
+        this.setZoom(5);
+        google.maps.event.removeListener(boundsListener);
+    });
+    
+}
+</script>
