--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,41 +1,110 @@
+<div class="row">
+	<div class="col-md-8">
+		<div class="page-header">
+		<h2> Listing rooms </h2>
+		</div>
+		<table class="table">
+		<thead>
+		<tr>
+		<th> Room Image</th>
+		<th>Name</th>
+		</tr>
+		</thead>
+		<tbody>
+
+		<% @rooms.each do |room| %>
 
 
-<h2> Listing rooms </h2>
-<table border=1>
-<thead>
-<tr>
-<th> Room Image</th>
-<th>Name</th>
-<th>Description</th>
-<th>price</th>
-<th>rules</th>
-<th>Address</th>
-<th>latitude</th>
-<th>longitude</th>
+		<tr>
 
-</tr>
-</thead>
-<tbody>
+		<td><%=image_tag (room.images.url) %></td>
+		<td><%= link_to room.name, room_path(room.id) %></td>
+		</tr>
+		<% end %>
 
-<% @rooms.each do |room| %>
+		</tbody>
+		</table>
+		<% if can? :create, Room.new %>
+	<%= link_to "add room", new_room_path %>
+	<% end %>
+	
+	</div>	
+<div class="col-md-4">
+      <div class="page-header">
+        <h2>Locations</h2>
+      </div>
+      <div id="map_wrapper">
+          <div id="map_canvas" class="mapping"></div>
+      </div>
+      <style>  
+          #map_wrapper {
+            height: 400px;
+        }
+        #map_canvas {
+            width: 100%;
+            height: 100%;
+        }  
+        </style>
 
+    </div>
+  </div>
 
-<tr>
-
-<td><%=image_tag (room.images.url) %></td>
-<td><%= link_to room.name, room_path(room.id) %></td>
-<td><%=room.description %></td>
-<td><%= room.price %></td>
-<td><%=room.rules %></td>
-<td><%= room.address %></td>
-<td><%= room.latitude %></td>
-<td><%= room.longitude %></td>
-
- 
-</tr>
-<% end %>
-</tbody>
-</table>
-<% if can? :create, Room.new %>
- <%= link_to "add room", new_room_path %>
- <% end %>
+<script>
+  jQuery(function($) {
+    // Asynchronously Load the map API 
+    var script = document.createElement('script');
+    script.src = "//maps.googleapis.com/maps/api/js?sensor=false&callback=initialize";
+    document.body.appendChild(script);
+});
+function initialize() {
+    var map;
+    var bounds = new google.maps.LatLngBounds();
+    var mapOptions = {
+        mapTypeId: 'roadmap'
+    };
+                    
+    // Display a map on the page
+    map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+    map.setTilt(45);
+        
+    // Multiple Markers
+    var markers = [];
+    
+    <% @rooms.each do |room| %>
+      markers.push(['<%= room.name %>', <%= room.latitude %>, <%= room.longitude %>])
+    <% end %>
+                        
+    // Info Window Content
+   
+        
+    // Display multiple markers on a map
+    var infoWindow = new google.maps.InfoWindow(), marker, i;
+    
+    // Loop through our array of markers & place each one on the map  
+    for( i = 0; i < markers.length; i++ ) {
+        var position = new google.maps.LatLng(markers[i][1], markers[i][2]);
+        bounds.extend(position);
+        marker = new google.maps.Marker({
+            position: position,
+            map: map,
+            title: markers[i][0]
+        });
+        
+        // Allow each marker to have an info window    
+        google.maps.event.addListener(marker, 'click', (function(marker, i) {
+            return function() {
+                infoWindow.setContent(infoWindowContent[i][0]);
+                infoWindow.open(map, marker);
+            }
+        })(marker, i));
+        // Automatically center the map fitting all markers on the screen
+        map.fitBounds(bounds);
+    }
+    // Override our map zoom level once our fitBounds function runs (Make sure it only runs once)
+    var boundsListener = google.maps.event.addListener((map), 'bounds_changed', function(event) {
+        this.setZoom(5);
+        google.maps.event.removeListener(boundsListener);
+    });
+    
+}
+</script>
