--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,38 +1,3 @@
 <h2> Adding the room </h2>
-
-	
-<%= form_for @room do |f| %>
-<% if @room.errors.any? %>
-	<h3> These errors prohibited the form from being saved : </h3>
-	<ul>
-	<% @room.errors.full_messages.each do |msg| %>
-	<li><%= msg %></li>
-	<% end %>
-</ul>
-	<% end %>
-
-<label>name</label>
-<%= f.text_field :name %><br /><br />
-<label>description</label>
-<%=f.text_area :description %><br /><br />
-<label>price</label>
-<%= f.text_field :price %><br /><br />
-<label>rules</label>
-<%= f.text_area :rules%><br /><br />
-<label>address</label>
-<%= f.text_area :address %><br /><br />
-<label> City name </label>
-<%= f.collection_select :city_id, City.all, :id, :name, prompt: "Select City" %>
-
-<%= f.collection_check_boxes :amenity_ids, Amenity.all, :id, :name %>
-<label>images</label>
-<%=f.file_field :images %>
-<%= f.submit %>
-
-<% end %>
-
-   <script>
-	$(document).ready(function(){
-		$('#room_city_id').chosen(); 
-	});
-   </script>
+<div id="errorMsg"></div>
+<%= render 'form' %>	
