--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -44,10 +44,11 @@
 
 </ol>
 </p>
-
+<%if user_signed_in? %>
 <% if @room.user_id == current_user.id%>
  <%= link_to "add special price",  new_room_special_price_path(@room.id) %>
 
+<% end %>
 <% end %>
 <%= form_for @booking do |f| %>
 
@@ -61,6 +62,7 @@
 <%= link_to "edit", edit_room_path(@room.id) %>
 
 <% end %>
+<% if user_signed_in? %>
 <% if Review.show_rating_form(@room.id, current_user.id) %>
 
 <%= form_for @review do |f| %>
@@ -68,51 +70,76 @@
 <%= f.label "review" %><br />
 <%= f.text_field :review  %><br />
 <%= f.label "food rating" %><br /><br />
-<%= f.collection_radio_buttons :food_rating, [[1],[2],[3],[4],[5]], :first, :last %>
-<%#= f.radio_button :food_rating, 2 %>
-<%#= f.radio_button :food_rating, 3%>
-<%#= f.radio_button :food_rating, 4 %>
-<%#= f.radio_button :food_rating, 5 %>
-<%= f.label "cleanliness_rating" %><br /><br />
+
+<%= f.radio_button :food_rating, 1 %>1
+<%= f.radio_button :food_rating, 2%>2
+<%= f.radio_button :food_rating, 3 %>3
+<%= f.radio_button :food_rating, 4 %>4
+<%= f.radio_button :food_rating, 5 %>5
+<br /><%= f.label "cleanliness_rating" %><br /><br />
 <%= f.radio_button :cleanliness_rating, 1 %>1
 <%= f.radio_button :cleanliness_rating, 2 %>2
 <%= f.radio_button :cleanliness_rating, 3 %>3
 <%= f.radio_button :cleanliness_rating, 4 %>4
 <%= f.radio_button :cleanliness_rating, 5 %>5
-<%= f.label "Safety_Rating" %><br /><br />
+<br /><%= f.label "Safety_Rating" %><br /><br />
 <%= f.radio_button :safety_rating, 1 %>1
 <%= f.radio_button :safety_rating, 2 %>2
 <%= f.radio_button :safety_rating, 3 %>3
 <%= f.radio_button :safety_rating, 4 %>4
 <%= f.radio_button :safety_rating, 5 %>5
 
-<%= f.label "locality_rating" %><br /><br />
+<br /><%= f.label "locality_rating" %><br /><br />
 <%= f.radio_button :locality_rating, 1%>1
 <%= f.radio_button :locality_rating, 2%>2
 <%= f.radio_button :locality_rating, 3%>3
 <%= f.radio_button :locality_rating, 4%>4
 <%= f.radio_button :locality_rating, 5%>5
 
+
+
+
+
+<br /><%= f.label "facility_rating" %><br /><br />
+<%= f.radio_button :facility_rating, 1%>1
+<%= f.radio_button :facility_rating, 2%>2
+<%= f.radio_button :facility_rating, 3%>3
+<%= f.radio_button :facility_rating, 4%>4
+<%= f.radio_button :facility_rating, 5%>5
+
+
+
 <%= f.hidden_field :room_id, value:@room.id %>
 
 <%= f.submit "add review" %>
 <% end %>
 <% end %>
+<% end %>
+<ol>
+<% @reviews.each do |review| %>
+<%= review.review %>
+<%= link_to "edit", edit_review_path(review.id)%>
+<%= link_to "destroy", review_path(review.id), method: :delete, data: {confirm: "Are you sure?"}%>
+<% end %>
+</ol>
 
 <script>
 // windowonload function()
 $(document).ready(function(){
+
+  var disableDates = <%= raw Booking.all.pluck(:start_date, :end_date).map{|dates| (dates[0]..dates[1]).to_a}.flatten.uniq.map{|date| date.strftime("%d %m %Y")} %>
+
+
+
   $('#booking_start_date').datepicker({
     dateFormat: 'yy-mm-dd',
     numberOfMonths: 2, 
     minDate: 0
   });
   $('#booking_start_date').on('change', function(){
-     setTimeOut(function(){
-       $('#booking_end_date').focus();
-     }, 0);
+  
     
-          var startDate = new Date($('#booking_start_date').val())
+          var startDate = new Date($('#booking_start_date').val());
         $('#booking_end_date').datepicker("destroy");
 
     $('#booking_end_date').datepicker({
@@ -128,3 +155,4 @@ $(document).ready(function(){
   
 
 </script>
+<iframe  src="https://www.google.com/maps/embed/v1/place?key= AIzaSyCOO8uiw6fDx5OAP0tD2kPbcZeHwOQ31RM &q=<%= @room.latitude%>, <%= @room.longitude %>" allowfullscreen></iframe>
