--- a/app/views/cities/create.js.erb
+++ b/app/views/cities/create.js.erb
@@ -3,6 +3,6 @@ $('#errorMsg').html("<%= escape_javascript render 'errors' %>");
 <% else %>
 $('#errorMsg').hide();
 $('#cityList').append("<%= escape_javascript render 'citys' %>");
-$('#new_room')[0].reset();
+$('#new_city')[0].reset();
 
 <% end %>
