--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -22,11 +22,14 @@
 
   <% if current_user.role?("admin")%>
   <li><a href="/rooms/unauthorize">unauthorised_rooms</a></li>
+  <li><a href="/amenities">Amenties</a></li>
   <% end %>
     <li><a href="/bookings">Bookings</a></li>  
   <% if current_user.role?("host")%>
     <li><a href="/rooms/myrooms">MyRooms</a></li>
     <li><a href="/rooms/allbookings">MyRoomBookings</a></li>
+    <li><a href="/bookings/is_confirmed">UnconfirmedBookings</a></li>
+
     <% end %>
 
   <% if current_user.role?("admin") %>
@@ -35,7 +38,7 @@
 
 
   <% end %>
-  <li><a href="/users/edit"><%= current_user.username %></a></li>
+  <li><a href="/users/edit"><i class="glyphicon glyphicon-user"> <%= current_user.username %></i></a></li>
   <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
   </ul>
   </div>
